// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`entra-agent-id - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Guides Microsoft Entra Agent ID setup, agent identity provisioning, and OAuth 2.0 token exchange via Microsoft Graph. USE FOR: create Agent Identity Blueprint, BlueprintPrincipal, register AI agent identity, agent OAuth authentication, Agent Identity sponsors, Workload Identity Federation for agents, fmi_path token exchange, OBO for agents, cross-tenant agent identity, Microsoft Entra SDK for AgentID sidecar, polyglot agent auth, Microsoft.Identity.Web.AgentIdentities. DO NOT USE FOR: standard Entra app registration (use entra-app-registration), Azure RBAC (use azure-rbac), Key Vault secrets, Microsoft Foundry agent authoring (use microsoft-foundry).",
  "extractedKeywords": [
    "agent",
    "agentid",
    "agentidentities",
    "agents",
    "ai",
    "auth",
    "authentication",
    "authoring",
    "azure",
    "azure-rbac",
    "blueprint",
    "blueprintprincipal",
    "cli",
    "container",
    "create",
    "cross-tenant",
    "entra",
    "entra-app-registration",
    "exchange",
    "federation",
    "fmi_path",
    "foundry",
    "graph",
    "guides",
    "identity",
    "mcp",
    "microsoft",
    "microsoft-foundry",
    "oauth",
    "polyglot",
    "provisioning",
    "rbac",
    "register",
    "registration",
    "secrets",
    "setup",
    "sidecar",
    "sponsors",
    "standard",
    "token",
    "vault",
    "workload",
  ],
  "name": "entra-agent-id",
}
`;

exports[`entra-agent-id - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agentid",
  "agentidentities",
  "agents",
  "ai",
  "auth",
  "authentication",
  "authoring",
  "azure",
  "azure-rbac",
  "blueprint",
  "blueprintprincipal",
  "cli",
  "container",
  "create",
  "cross-tenant",
  "entra",
  "entra-app-registration",
  "exchange",
  "federation",
  "fmi_path",
  "foundry",
  "graph",
  "guides",
  "identity",
  "mcp",
  "microsoft",
  "microsoft-foundry",
  "oauth",
  "polyglot",
  "provisioning",
  "rbac",
  "register",
  "registration",
  "secrets",
  "setup",
  "sidecar",
  "sponsors",
  "standard",
  "token",
  "vault",
  "workload",
]
`;
